--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
 aiosignal==1.4.0
 annotated-types==0.7.0
-anthropic==0.58.2
+anthropic==0.60.0
 anyio==4.9.0
 attrs==25.3.0
 azure-cognitiveservices-speech==1.45.0
@@ -13,7 +13,6 @@ certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
-colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
 faiss-cpu==1.11.0.post1
@@ -31,68 +30,103 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
-huggingface-hub==0.33.4
+huggingface-hub==0.34.3
 idna==3.10
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 keyboard==0.13.5
 langchain==0.3.26
+langchain-anthropic==0.3.18
 langchain-community==0.3.27
-langchain-core==0.3.69
+langchain-core==0.3.72
+langchain-openai==0.3.28
+langchain-tavily==0.2.11
 langchain-text-splitters==0.3.8
-langsmith==0.4.8
+langgraph==0.6.3
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.3
+langgraph-sdk==0.2.0
+langsmith==0.4.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.6
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.6.3
 mypy_extensions==1.1.0
+nest_asyncio==1.5.8
+networkx==3.5
 numpy==2.3.1
 openai==1.97.0
 orjson==3.11.0
-packaging==25.0
+ormsgpack==1.10.0
+packaging==23.2
 pandas==2.3.1
+parso==0.8.3
+pickleshare==0.7.5
 pillow==11.3.0
+platformdirs==4.2.0
+prompt_toolkit==3.0.43
 propcache==0.3.2
+psutil==5.9.6
+pure_eval==0.2.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pydub==0.25.1
-Pygments==2.19.2
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
+pywin32==306
 PyYAML==6.0.2
+pyzmq==26.0.3
 regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
 rich==14.0.0
 ruff==0.12.4
 safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.7.1
 scipy==1.16.0
 semantic-version==2.10.0
+sentence-transformers==5.0.0
 shellingham==1.5.4
-six==1.17.0
+six==1.16.0
 sniffio==1.3.1
 sounddevice==0.5.2
+soundfile==0.12.1
 SQLAlchemy==2.0.41
+stack_data==0.6.3
 starlette==0.47.1
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.9.0
+tokenizers==0.21.4
 tomlkit==0.13.3
+torch==2.7.1
+tornado==6.4
 tqdm==4.67.1
+traitlets==5.14.2
+transformers==4.54.1
 typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.11.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
+wcwidth==0.2.13
 websockets==15.0.1
+xxhash==3.5.0
 yarl==1.20.1
+zipp==3.19.0
 zstandard==0.23.0
-soundfile==0.12.1
