--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anthropic==0.61.0
 anyio==4.10.0
+attrs==25.3.0
 azure-cognitiveservices-speech==1.45.0
 azure-core==1.35.0
 Brotli==1.1.0
@@ -15,11 +19,13 @@ fastapi==0.116.1
 ffmpeg==1.4
 ffmpy==0.6.1
 filelock==3.18.0
+frozenlist==1.7.0
 fsspec==2025.7.0
 gradio==5.41.0
 gradio_client==1.11.0
 greenlet==3.2.3
 groovy==0.1.2
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -34,6 +40,7 @@ langchain==0.3.27
 langchain-anthropic==0.3.18
 langchain-core==0.3.72
 langchain-openai==0.3.28
+langchain-tavily==0.2.11
 langchain-text-splitters==0.3.9
 langsmith==0.4.12
 logger==1.4
@@ -41,6 +48,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.6.3
 networkx==3.5
 numpy==2.3.2
 openai==1.99.1
@@ -48,6 +56,7 @@ orjson==3.11.1
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
+propcache==0.3.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -90,4 +99,5 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 websockets==15.0.1
+yarl==1.20.1
 zstandard==0.23.0
